# effective_python

./: angr.presentation.ipynb  lab01.ipynb  lab02.ipynb  lab03.ipynb  lab04.ipynb  lab05.ipynb  lab06.ipynb  lab11.ipynb  lab12.ipynb  pyproject.toml
binaries/: simple  simple.c
