[tool.poetry]
name = "effective_python"
version = "0.1.0"
description = ""
authors = ["Krzysztof Misztal"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
rise = "^5.6.1"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
